--- a/main_projects/02_Face Hallucination.ipynb
+++ b/main_projects/02_Face Hallucination.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This project is based on *Sam Witteveen's work on Super-resolution*, and modified accordingly for face hallucination purpose.\n",
     "\n",
-    "The bcolz dataset used in this training is [44x44](https://1drv.ms/u/s!ArIKNjDOB13ch3EacToq2ZKle8Pn) and [176x176]()"
+    "The bcolz dataset used in this training is [44x44](https://1drv.ms/u/s!ArIKNjDOB13ch3EacToq2ZKle8Pn) and [176x176](https://1drv.ms/u/s!ArIKNjDOB13ch3JgxEoiXhZWDdXH)"
    ]
   },
   {
