--- a/main_projects/02_Face Hallucination.ipynb
+++ b/main_projects/02_Face Hallucination.ipynb
@@ -2692,7 +2692,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "We test with our test data.."
+    "\n",
+    "Now we test with our **Test dataset**.\n"
    ]
   },
   {
