reduce training set

--- a/main_projects/02_Face_detection/02_Face Detection.ipynb
+++ b/main_projects/02_Face_detection/02_Face Detection.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "The recent work on Retina-Net object by [Tsung-Yi Lin et al](https://arxiv.org/abs/1708.02002) implemented in by [Fizyr](https://github.com/fizyr/keras-retinanet) is explored in this task.\n",
     "\n",
-    "The dataset is based on FDDB dataset. And for training, 4000 face images are used and for validation, 656 face images are used.\n",
+    "The dataset is based on FDDB dataset. And for training, 1000 face images are used and for validation, 200 face images are used.\n",
     "\n",
     "The codes below is modified from the Fizyr reference.\n"
    ]
@@ -688,11 +688,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      " 67/552 [==>...........................] - ETA: 11:15 - loss: 1.4325 - regression_loss: 0.3538 - classification_loss: 1.0786"
+      "133/134 [============================>.] - ETA: 0s - loss: 0.3442 - regression_loss: 0.1323 - classification_loss: 0.2119Epoch 00001: val_loss improved from inf to 0.28638, saving model to snapshots\\resnet50_csv_best.h5\n",
+      "134/134 [==============================] - 94s 705ms/step - loss: 0.3437 - regression_loss: 0.1321 - classification_loss: 0.2116 - val_loss: 0.2864 - val_regression_loss: 0.1080 - val_classification_loss: 0.1784\n",
+      "Epoch 2/20\n",
+      "133/134 [============================>.] - ETA: 0s - loss: 0.2434 - regression_loss: 0.1011 - classification_loss: 0.1423Epoch 00002: val_loss improved from 0.28638 to 0.24390, saving model to snapshots\\resnet50_csv_best.h5\n",
+      "134/134 [==============================] - 99s 739ms/step - loss: 0.2430 - regression_loss: 0.1007 - classification_loss: 0.1423 - val_loss: 0.2439 - val_regression_loss: 0.0893 - val_classification_loss: 0.1546\n",
+      "Epoch 3/20\n",
+      "133/134 [============================>.] - ETA: 0s - loss: 0.1918 - regression_loss: 0.0879 - classification_loss: 0.1039Epoch 00003: val_loss improved from 0.24390 to 0.17550, saving model to snapshots\\resnet50_csv_best.h5\n",
+      "134/134 [==============================] - 99s 739ms/step - loss: 0.1915 - regression_loss: 0.0878 - classification_loss: 0.1037 - val_loss: 0.1755 - val_regression_loss: 0.0843 - val_classification_loss: 0.0912\n",
+      "Epoch 4/20\n",
+      " 63/134 [=============>................] - ETA: 47s - loss: 0.1596 - regression_loss: 0.0766 - classification_loss: 0.0829"
      ]
     }
    ],
    "source": [
+    "model.save(os.path.join('snapshots','resnet50_csv_final.h5'))\n",
+    "           \n",
     "# start training\n",
     "try:\n",
     "    history = model.fit_generator(\n",
@@ -713,7 +724,7 @@
     "    pass\n",
     "\n",
     "# store final result too\n",
-    "model.save(os.path.join('snapshots', 'resnet50_csv_final.h5'))"
+    "model.save(os.path.join('snapshots','resnet50_csv_final.h5'))"
    ]
   },
   {
