update with third class - rnn topics

--- a/proj03/Reference_classification.ipynb
+++ b/proj03/Reference_classification.ipynb
@@ -20,6 +20,7 @@
     "The amount of input is not many, I start first with a small amount of dataset.\n",
     "\n",
     "Update 13/11: two categories at moment\n",
+    "Update 28/11: three categories..\n",
     "\n",
     "There are about 80 documents for each categories with one document is about 5000 words.\n",
     "\n",
@@ -31,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -50,18 +49,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "C:\\Users\\k\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:860: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "C:\\Users\\ku\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:860: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
       "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
-      "C:\\Users\\k\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "C:\\Users\\ku\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -97,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "max_words = 1000\n",
-    "max_features = 500\n",
+    "max_features = 10\n",
     "maxlen = 80  # cut texts after this number of words (among top max_features most common words)\n",
     "batch_size = 32\n",
     "epochs = 20"
@@ -113,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Limit each newsline to a fixed number of words\n",
@@ -126,43 +121,41 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "docs1 = pickle.load(open('cnn.pkl','rb'))\n",
-    "docs2 = pickle.load(open('device_characterization.pkl','rb'))"
+    "docs2 = pickle.load(open('device_characterization.pkl','rb'))\n",
+    "docs3 = pickle.load(open('rnn.pkl','rb'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "docs = []\n",
     "for d1 in docs1:\n",
     "    docs.append(d1)\n",
     "for d2 in docs2:\n",
-    "    docs.append(d2)"
+    "    docs.append(d2)\n",
+    "for d3 in docs3:\n",
+    "    docs.append(d3)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total words in corpus: 168\n",
-      "{'device characterizations': 0, 'convolutional neural network': 1}\n"
+      "total words in corpus: 272\n",
+      "{'convolutional neural network': 0, 'recurrent neural network': 1, 'device characterizations': 2}\n"
      ]
     }
    ],
@@ -182,25 +175,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "  "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# tokenizer = Tokenizer()\n",
     "# tokenizer.fit_on_texts(alltext)\n",
-    "num_features = 500\n",
+    "num_features = 10\n",
     "w2v_model = Word2Vec(alltext, size=num_features, min_count=1, window=10)\n",
     "w2v_model.init_sims(replace=True)\n",
     "w2v_model.save('test.word2vec')"
@@ -208,18 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "168"
+       "272"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,24 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "num_categories = 2\n",
-    "X = zeros(shape=(number_of_documents, document_max_num_words, num_features)).astype(float32)\n",
-    "Y = zeros(shape=(number_of_documents, num_categories)).astype(float32)\n",
-    "empty_word = zeros(num_features).astype(float32)"
+    "num_categories = 3\n",
+    "X = np.zeros(shape=(number_of_documents, document_max_num_words, num_features)).astype(np.float32)\n",
+    "Y = np.zeros(shape=(number_of_documents, num_categories)).astype(np.float32)\n",
+    "empty_word = np.zeros(num_features).astype(np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for idx, document in enumerate(alltext):\n",
@@ -265,10 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for idx, key in enumerate(label_map.keys()):\n",
@@ -277,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -306,16 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 190 samples, validate on 82 samples\n",
+      "Epoch 1/10\n",
+      "\r",
+      "128/190 [===================>..........] - ETA: 0s - loss: 0.1139 - acc: 0.9922"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\k\\Anaconda3\\lib\\site-packages\\keras\\models.py:848: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
+      "C:\\Users\\ku\\Anaconda3\\lib\\site-packages\\keras\\models.py:874: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
       "  warnings.warn('The `nb_epoch` argument in `fit` '\n"
      ]
     },
@@ -323,26 +314,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 117 samples, validate on 51 samples\n",
-      "Epoch 1/5\n",
-      "117/117 [==============================] - 0s - loss: 0.2694 - acc: 0.9915 - val_loss: 0.1271 - val_acc: 1.0000\n",
-      "Epoch 2/5\n",
-      "117/117 [==============================] - 0s - loss: 0.1475 - acc: 0.9915 - val_loss: 0.0403 - val_acc: 1.0000\n",
-      "Epoch 3/5\n",
-      "117/117 [==============================] - 0s - loss: 0.0682 - acc: 0.9915 - val_loss: 0.0137 - val_acc: 1.0000\n",
-      "Epoch 4/5\n",
-      "117/117 [==============================] - 0s - loss: 0.0480 - acc: 0.9915 - val_loss: 0.0064 - val_acc: 1.0000\n",
-      "Epoch 5/5\n",
-      "117/117 [==============================] - 0s - loss: 0.0524 - acc: 0.9915 - val_loss: 0.0038 - val_acc: 1.0000\n",
-      "51/51 [==============================] - 0s\n",
-      "Score: 0.0038\n",
-      "Accuracy: 1.0000\n"
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0944 - acc: 0.9947 - val_loss: 0.1177 - val_acc: 0.9878\n",
+      "Epoch 2/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0524 - acc: 0.9947 - val_loss: 0.1160 - val_acc: 0.9878\n",
+      "Epoch 3/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0418 - acc: 0.9947 - val_loss: 0.1198 - val_acc: 0.9878\n",
+      "Epoch 4/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0364 - acc: 0.9947 - val_loss: 0.1257 - val_acc: 0.9878\n",
+      "Epoch 5/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0343 - acc: 0.9947 - val_loss: 0.1326 - val_acc: 0.9878\n",
+      "Epoch 6/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0360 - acc: 0.9947 - val_loss: 0.1391 - val_acc: 0.9878\n",
+      "Epoch 7/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0294 - acc: 0.9947 - val_loss: 0.1453 - val_acc: 0.9878\n",
+      "Epoch 8/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0336 - acc: 0.9947 - val_loss: 0.1508 - val_acc: 0.9878\n",
+      "Epoch 9/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0376 - acc: 0.9947 - val_loss: 0.1551 - val_acc: 0.9878\n",
+      "Epoch 10/10\n",
+      "190/190 [==============================] - 0s 1ms/step - loss: 0.0353 - acc: 0.9947 - val_loss: 0.1582 - val_acc: 0.9878\n",
+      "82/82 [==============================] - 0s 318us/step\n",
+      "Score: 0.1582\n",
+      "Accuracy: 0.9878\n"
      ]
     }
    ],
    "source": [
     "# Train model\n",
-    "model.fit(X_train, Y_train, batch_size=128, nb_epoch=5, validation_data=(X_test, Y_test))\n",
+    "model.fit(X_train, Y_train, batch_size=128, nb_epoch=10, validation_data=(X_test, Y_test))\n",
     "\n",
     "# Evaluate model\n",
     "score, acc = model.evaluate(X_test, Y_test, batch_size=128)\n",
@@ -353,168 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# vdocs = []\n",
-    "# for i in range(0, len(docs)):\n",
-    "#     k = label_map[ docs[i][0] ]\n",
-    "#     v = tokenizer.texts_to_sequences(docs[i][1]) # the result is list of list\n",
-    "#     # we need to make it list of values\n",
-    "#     vv = [q[0] for q in v if q != []]\n",
-    "#     vdocs.append((k,vv))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# random.seed(1000)\n",
-    "# random.shuffle(vdocs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# test_split = 0.2\n",
-    "# pad = 0\n",
-    "\n",
-    "# # train size\n",
-    "# sz1 = int(len(vdocs)*(1-test_split))\n",
-    "# X_train1 = []\n",
-    "# y_train1 = []\n",
-    "# for i in range(0, sz1):\n",
-    "#     label = vdocs[i][0]\n",
-    "#     y_train1.append(label)\n",
-    "#     txt1 = vdocs[i][1]\n",
-    "#     if len(txt1)<max_words:\n",
-    "#         for j in range(len(txt1), max_words+1):\n",
-    "#             txt1.append(pad)\n",
-    "#     else:\n",
-    "#         txt1 = txt1[:max_words]\n",
-    "#     X_train1.append(txt1)\n",
-    "\n",
-    "# X_test1 = []\n",
-    "# y_test1 = []\n",
-    "# for i in range(sz1, len(vdocs)):\n",
-    "#     label = vdocs[i][0]\n",
-    "#     y_test1.append(label)\n",
-    "#     txt1 = vdocs[i][1]\n",
-    "#     if len(txt1)<max_words:\n",
-    "#         for j in range(len(txt1), max_words+1):\n",
-    "#             txt1.append(pad)\n",
-    "#     else:\n",
-    "#         txt1 = txt1[:max_words]\n",
-    "#     X_test1.append(txt1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# X_train = np.array(X_train1)\n",
-    "# y_train = np.array(y_train1)\n",
-    "# X_test = np.array(X_test1)\n",
-    "# y_test = np.array(y_test1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# num_features=500\n",
-    "# num_categories=2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Build model...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print('Build model...')\n",
-    "# model = Sequential()\n",
-    "# model.add(Embedding(max_features, 128))\n",
-    "# model.add(LSTM(128, dropout=0.2, recurrent_dropout=0.2))\n",
-    "# model.add(Dense(1, activation='sigmoid'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# # try using different optimizers and different optimizer configs\n",
-    "# model.compile(loss='binary_crossentropy',\n",
-    "#               optimizer='adam',\n",
-    "#               metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 18,
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
-    "# print('Train...')\n",
-    "# model.fit(X_train, y_train,\n",
-    "#           batch_size=batch_size,\n",
-    "#           epochs=15,\n",
-    "#           validation_data=(X_test, y_test)\n",
-    "#          )\n",
-    "# score, acc = model.evaluate(X_test, y_test,\n",
-    "#                             batch_size=batch_size)\n",
-    "# print('Test score:', score)\n",
-    "# print('Test accuracy:', acc)"
+    "out = model.predict(X_test)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -526,9 +377,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
