fix missing quote

--- a/main_projects/02_Face_detection/02_Face Detection.ipynb
+++ b/main_projects/02_Face_detection/02_Face Detection.ipynb
@@ -16,7 +16,7 @@
     "The dataset is based on FDDB dataset. And for training, 4000 face images are used and for validation, 600+ face images are used.\n",
     "\n",
     "The codes below is modified from the Fizyr reference.\n",
-    "The model and the weight can be downloaded at this [[1]](https://1drv.ms/u/s!AngGcEOgJEQ4iucQ0KNth6drYb5maA) and [[2]](https://1drv.ms/u/s!AngGcEOgJEQ4iucPs7v6rvtAicBqQw).
+    "The model and the weight can be downloaded at this [[1]](https://1drv.ms/u/s!AngGcEOgJEQ4iucQ0KNth6drYb5maA) and [[2]](https://1drv.ms/u/s!AngGcEOgJEQ4iucPs7v6rvtAicBqQw)."
    ]
   },
   {
